kanban-kube/ingress/kanban-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-ingress
  namespace: kanban
spec:
  rules:
    - host: localhost 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kanban-ui
                port:
                  number: 80
          - path: /api/kanbans
            pathType: Prefix
            backend:
              service:
                name: kanban-app
                port:
                  number: 8080
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
